--- a/src/Components/VirtualTable/HeadComponent/HeadComponent.scss
+++ b/src/Components/VirtualTable/HeadComponent/HeadComponent.scss
@@ -2,9 +2,11 @@
 @import "../Common.scss";
 
 .HeadComponent {
+    overflow-x: hidden;
+
     > table {
-        width: 100%;
         border-spacing: 0;
+        border-collapse: collapse;
         
         .HeaderCell {
             border-bottom: $component-border;
